base/livekit/client/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livekit-client
  namespace: livekit
spec:
  selector:
    app: livekit-client
  ports:
    - port: 3000
      targetPort: 3000
